Fix view overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,15 +4,10 @@
 @import './wxParse/wxParse.wxss';
 @import 'node';
 @import 'account';
-// .container {
-// 	height: 100%;
-// 	display: flex;
-// 	flex-direction: column;
-// 	align-items: center;
-// 	justify-content: space-between;
-// 	padding: $padding 0;
-// 	box-sizing: border-box;
-// }
+
+view {
+  overflow: hidden;
+}
 
 .container {
   height: 100vh;
@@ -28,10 +23,6 @@
   background-color: $background_color;
   padding: 0 40rpx;
   padding-top: 32rpx;
-
-  // scroll-view {
-  //   height: 100%;
-  // }
 }
 
 ::-webkit-scrollbar {
